# pandasnoir

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
src/pandasnoir/: ABOUT.md  _cases_data.py  app.py  logo  mascot.py  modifiers.py  utils.py
src/pandasnoir/cases/case_1/: crime_scene.csv  interviews.csv  suspects.csv
src/pandasnoir/cases/case_2/: crime_scene.csv  interviews.csv  suspects.csv  witnesses.csv
src/pandasnoir/cases/case_3/: confessions.csv  crime_scene.csv  hotel_checkins.csv  interviews.csv  person.csv  surveillance_records.csv
src/pandasnoir/cases/case_4/: attire_registry.csv  crime_scene.csv  final_interviews.csv  guest.csv  marina_rentals.csv  witness_statements.csv
src/pandasnoir/cases/case_5/: catering_orders.csv  crime_scene.csv  final_interviews.csv  hotel_checkins.csv  person.csv  phone_records.csv  surveillance_records.csv  vehicle_registry.csv  witness_statements.csv
src/pandasnoir/cases/case_6/: computer_access_logs.csv  email_logs.csv  employee_records.csv  facility_access_logs.csv  incident_reports.csv  keycard_access_logs.csv  witness_statements.csv
src/pandasnoir/cases_docs/: case_1.md
tests/: conftest.py  test_app_cases.py  test_app_game.py  test_app_menu.py  test_cases_data.py  test_utils_io.py  test_utils_pure.py
